--- a/view/home.html
+++ b/view/home.html
@@ -56,7 +56,7 @@
 		{
 			 var node = document.createElement("IMG");  
 			 node.setAttribute("id","x"+i );  
-			 node.src = "arrayimg[0]";  
+			 node.src = arrayimg[0];  
 			 node.setAttribute("width",600/le);
 			 node.setAttribute("height",600/le);
 			 node.onclick = function(){	;
