--- a/view/input.html
+++ b/view/input.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-	<title>Enter name</title>
+  <meta charset="UTF-8">
+  <title>Pure CSS Login Form</title>
+  <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+      <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-		<label for="fname">Your Score </label> <br/>
-        <!-- <input type="text" id="fname" name="firstname" placeholder="Name.."> -->
+  <h1>Your Score !!!!</h1>
 
-        <label for="lname">Enter Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Name..">
+<div class="stand">
+  <div class="outer-screen">
+    <div class="inner-screen">
+      <div class="form">
+        <input type="text" class="zocial-dribbble" placeholder="Enter Your name ..." /><br/>
+         <input type="submit" value="OK" />
+      </div> 
+    </div> 
+  </div> 
+</div>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-                        
-
-                        <input type="submit" value="Submit">
+  
 </body>
 </html>
