--- a/view/index.html
+++ b/view/index.html
@@ -7,13 +7,13 @@
 .block-1 {
 	width: 600px;
 	height: 500px;
-	/*margin: 20px;*/
 	background: #0E9F98;
  position: absolute;
   top: 20%;
   left: 35%;
   margin-top: -50px; /* -(height/2) */
   margin-left: -100px; /* -(width/2) */
+  opacity: 0.4;
 }
 .block-2 {
 	width: 560px;
@@ -23,20 +23,13 @@
 	float: left;
 
 }	
-/*.block-3 {
-	width: 170px;
-	height: 150px;
-	margin: 20px;
-	background: #04BF9D;
-	float: right;
-}*/
+
 .block-4 {
 	width: 560px;
 	height: 280px;
 	margin: 20px;
 	background: #04BF9D;
 	clear: both; 
-	/*background-color: transparent; */
 	text-align:center; 
 }
 .block-5 { 
@@ -81,7 +74,7 @@ a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 
 
 	</style>
 </head>
-<body background="http://data.whicdn.com/images/161060868/superthumb.jpg" >
+<body background="http://img14.deviantart.net/7716/i/2013/044/8/2/cat_shapes___background_by_lalunatique-d5f93yf.jpg"> 
 
 
 
@@ -89,12 +82,11 @@ a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 
 		<div class="block-1"> 
 
 		<div class="block-2"></div>
-		<div class="block-3"></div>
 		<div class="block-4">
 		 <br/>
 		 	<a class="red" href="home">New Game!</a><br/>
-    		<a class="orange" href="">High Score!</a><br/>
-   			 <a class="yellow" href="">How to play!</a><br/>
+    		<a class="orange" href="highscore">High Score!</a><br/>
+   			 <a class="yellow" href="howto">How to play!</a><br/>
 		 
 			
 			
