--- a/view/input.html
+++ b/view/input.html
@@ -1,27 +1,75 @@
-<!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>Pure CSS Login Form</title>
-  <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
-      <link rel="stylesheet" href="style.css">
-</head>
+#main{
+    width: 600px;
+    height: 600px;
+    margin-top: 30px;
+    /*background-color: #0E9F98;*/
+  }
+  #time{
+    width: 250px;
+    height: 150px;
+    margin-top: 30px;
+    background-color: #0E9F98;
+     border: 3px solid #ccc;
+     /*opacity:0.5;*/
 
-<body>
-  <h1>Your Score !!!!</h1>
-
-<div class="stand">
-  <div class="outer-screen">
-    <div class="inner-screen">
-      <div class="form">
-        <input type="text" class="zocial-dribbble" placeholder="Enter Your name ..." /><br/>
-         <input type="submit" value="OK" />
-      </div> 
-    </div> 
-  </div> 
-</div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+  }
+  #scorelevel{
+    width: 250px;
+    height: 400px;
+    margin-top: 30px;
+    background-color: #0E9F98;
+     border: 3px solid #ccc;
+     float: left;
+  }
+  #level{
+    width: 250px;
+    height: 150px;
+  }
+  #score{
+    width: 250px;
+    height: 200px;
+  }
   
-</body>
-</html>
+
+  #popup1{
+    text-align: center;
+  }
+  .overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+h3{
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+@media screen and (max-width: 700px){
+  .popup{
+    width: 70%;
+  }
+}
