--- a/view/index.html
+++ b/view/index.html
@@ -13,7 +13,7 @@
   left: 35%;
   margin-top: -50px; /* -(height/2) */
   margin-left: -100px; /* -(width/2) */
-  opacity: 0.4;
+  /*opacity: 0.4;*/
 }
 .block-2 {
 	width: 560px;
