--- a/view/style.css
+++ b/view/style.css
@@ -1,4 +1,5 @@
-#main{
+  <style type="text/css">
+    #main{
     width: 600px;
     height: 600px;
     margin-top: 30px;
@@ -70,3 +71,4 @@ h3{
     width: 70%;
   }
 }
+  </style>
