--- a/view/style.css
+++ b/view/style.css
@@ -1,5 +1,6 @@
-  <style type="text/css">
-    #main{
+  
+
+  #main{
     width: 600px;
     height: 600px;
     margin-top: 30px;
@@ -21,54 +22,30 @@
   }
   #level{
     width: 250px;
-    height: 150px;
+    height: 100px;
   }
   #score{
     width: 250px;
-    height: 200px;
+    height: 100px;
   }
-  
-
-  #popup1{
+  #htime{
     text-align: center;
   }
-  .overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
+   #hlv{
+    text-align: center;
+  }
+  #hscore{
+    text-align: center;
+  }
+#htscore{
+    text-align: center;
+  }
+  
 h3{
   font-size: 2em;
   font-weight: bold;
   text-align: center;
 }
 
-.popup {
-  margin: 70px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 5px;
-  width: 30%;
-  position: relative;
-  transition: all 5s ease-in-out;
-}
-.popup .content {
-  max-height: 30%;
-  overflow: auto;
-}
-@media screen and (max-width: 700px){
-  .popup{
-    width: 70%;
-  }
-}
-  </style>
+.
+  
