--- a/view/highscore.html
+++ b/view/highscore.html
@@ -21,6 +21,36 @@
 			font-size: 2em;
 			font-weight: bold;
 		}
+		#head{
+			width: 500px;
+			height:400px;
+			float :left;
+			background-color: #FF9F98;
+		}
+		#number{
+			width: 166.6px;
+			height: 400px;
+			float :left;
+			background-color: #FFFFFF;
+		}
+		#name{
+			width: 166.6px;
+			height: 400px;
+			float :left;
+			background-color: #BBBBBB;
+		}
+		#score{
+			width: 166.6px;
+			height: 400px;
+			float :left;
+			background-color: #AAAAAA;
+		}
+		p{
+			font-size: 1.5em;
+			line-height:1.5em;
+			font-weight: bold;
+			text-align: center;
+		}
 
 
 
@@ -30,10 +60,21 @@
 
 		<div id="highscore">
 				<h3>HIGH SCORE</h3>
-				
-
-
+				<div id="head">
+					<div id="number">
+						<p>1 <br/>2<br/>
+							3<br/>
+							4<br/>
+							5<br/>
+							6<br/>
+							7<br/>
+							8<br/>
+							9<br/>
+							10<br/></p>
+					</div>
+ 					<div id="name"></div>
+					<div id="score"></div>
+				</div>
 		</div>
-
 </body>
 </html>
