--- a/view/highscore.html
+++ b/view/highscore.html
@@ -61,7 +61,7 @@
 		<div id="highscore">
 				<h3>HIGH SCORE</h3>
 				<div id="head">
-					<div id="number">
+					<!-- <div id="number">
 						<p>1 <br/>2<br/>
 							3<br/>
 							4<br/>
@@ -73,7 +73,7 @@
 							10<br/></p>
 					</div>
  					<div id="name"></div>
-					<div id="score"></div>
+					<div id="score"></div> -->
 				</div>
 		</div>
 </body>
