--- a/view/highscore.html
+++ b/view/highscore.html
@@ -15,11 +15,12 @@
 		    margin-left: -15em; 
 		    border: 3px solid #ccc;
 		    background-color: #f3f3f3;
-		    opacity:0.5;
+		    /*opacity:0.5;*/
 		}
 		h3{
 			font-size: 2em;
 			font-weight: bold;
+			text-decoration:underline
 		}
 		#head{
 			width: 500px;
@@ -74,6 +75,7 @@
 					</div>
  					<div id="name"></div>
 					<div id="score"></div> -->
+					
 				</div>
 		</div>
 </body>
