--- a/view/howto.html
+++ b/view/howto.html
@@ -1,9 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>How to play</title>
+	<style type="text/css">
+		#howto{
+			width: 500px;
+			height: 500px;
+			text-align: center;
+			background-color: #0E9F98;
+			position:absolute;
+		    top: 30%;
+		    left: 50%;
+		    margin-top: -9em; 
+		    margin-left: -15em; 
+		    border: 3px solid #ccc;
+		    background-color: #f3f3f3;
+		    /*opacity:0.5;*/
+		}
+		#head{
+			width: 460px;
+			height:400px;
+			margin-left: 20px;
+			/*background-color: #FF9F98;*/
+		}
+		p{
+			font-size: 1em;
+			font-weight: bold;
+			position:absolute; 
+		}
+		h3{
+			font-size: 2em;
+			font-weight: bold;
+			text-decoration:underline
+		}
+		
+		a { font-size:1.1em; 
+			font-weight: bold;
+			 bottom: 0px;
+			padding:24px 26px; 
+			display:inline-block; 
+			margin:5px; 
+			border-radius:6px; 
+			border:solid rgba(0,0,0,0.2); 
+			border-width:1px 1px 5px; 
+			box-shadow:0 5px 0 rgba(0,0,0,0.1), inset 0 0 3px rgba(255,255,255,0.3); 
+			cursor:pointer; 
+			user-select:none; 
+			transition:0.4s ease;
+			
+
+		}
+
+		a:hover { transform:translateY(-3px); box-shadow:0 6px 0 rgba(0,0,0,0.1), inset 0 0 1px rgba(255,255,255,0.4); border-bottom-width:8px; }
+
+		a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 0 0 5px rgba(255,255,255,0.4); border-bottom-width:2px; transition:0.1s ease; }
+		.red {
+			 background:hsl(8,59%,59%); 
+			 color:rgba(255,255,255,0.95); 
+			 text-shadow:-1px -1px 1px rgba(0,0,0,0.1); 
+			 text-decoration:none;
+		}
+	</style>
 </head>
 <body background="http://img14.deviantart.net/7716/i/2013/044/8/2/cat_shapes___background_by_lalunatique-d5f93yf.jpg">
-
+		<div id="howto">
+				<h3>How to play</h3>
+				<div id="head">
+					<p>1. Find Meow Game เป็นเกมส์สำหรับค้นหาน้องเเมว !!</p><br/><br/>
+					<p>2. เมื่อผู้เล่นเริ่มเกมส์ จะมีเวลาให้ด่านละ 10 วินาที เเละ 100 คะเเนน</p><br/><br/>
+					<p>3. มีทั้งหมด 25 ด่าน</p><br/><br/>
+					<p>4. 1 วินาทีมีค่าเท่ากับ 10 คะเเนน ดังนั้นคะเเนนจะลดลงตามเวลา</p><br/><br/>
+					<p>5. เมื่อผู้เล่นผ่านด่าน คะเเนนจะเก็บสะสมตั้งเเต่ด่านเเรกถึงปัจจุบัน</p> <br/><br/>
+					<p>6. ลุยกันเลยยยยย !</p> <br/><br/><br/>
+					<br/><a class="red" href="home">Start Game!</a><br/>
+				</div>
+		</div>
 </body>
 </html>
