--- a/view/index.html
+++ b/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fine meow</title>
+	<title>Find meow</title>
 	<style >
 
 .block-1 {
@@ -23,6 +23,13 @@
 	float: left;
 
 }	
+h1{
+	font-size: 3em;
+	font-weight: bold;;
+	text-align: center;;
+	color: #FFFFFF;
+	text-decoration:underline
+}
 
 .block-4 {
 	width: 560px;
@@ -81,10 +88,12 @@ a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 
 
 		<div class="block-1"> 
 
-		<div class="block-2"></div>
+		<div class="block-2">
+			<h1>Find Meow Game !!</h1>
+		</div>
 		<div class="block-4">
 		 <br/>
-		 	<a class="red" href="home">New Game!</a><br/>
+		 	<a class="red" href="home">Start Game!</a><br/>
     		<a class="orange" href="highscore">High Score!</a><br/>
    			 <a class="yellow" href="howto">How to play!</a><br/>
 		 
