--- a/view/highscore.html
+++ b/view/highscore.html
@@ -54,6 +54,10 @@
 			line-height:1.2em;
 			font-weight: bold;
 			text-align: center;
+
+		}
+		p#col{
+			text-decoration:underline
 		}
 		
 	</style>
