change dbs to text file

--- a/view/index.html
+++ b/view/index.html
@@ -93,7 +93,7 @@ a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 
 		</div>
 		<div class="block-4">
 		 <br/>
-		 	<a class="red" href="home">Start Game!</a><br/>
+		 	<a class="red" href="game">Start Game!</a><br/>
     		<a class="orange" href="highscore">High Score!</a><br/>
    			 <a class="yellow" href="howto">How to play!</a><br/>
 		 
