--- a/view/highscore.html
+++ b/view/highscore.html
@@ -59,6 +59,34 @@
 		p#col{
 			text-decoration:underline
 		}
+		a { font-size:1.1em; 
+			font-weight: bold;
+			position:absolute;
+			 bottom: 120px;
+			 right: 200px;
+			padding:24px 26px; 
+			display:inline-block; 
+			margin:5px; 
+			border-radius:6px; 
+			border:solid rgba(0,0,0,0.2); 
+			border-width:1px 1px 5px; 
+			box-shadow:0 5px 0 rgba(0,0,0,0.1), inset 0 0 3px rgba(255,255,255,0.3); 
+			cursor:pointer; 
+			user-select:none; 
+			transition:0.4s ease;
+			
+
+		}
+
+		a:hover { transform:translateY(-3px); box-shadow:0 6px 0 rgba(0,0,0,0.1), inset 0 0 1px rgba(255,255,255,0.4); border-bottom-width:8px; }
+
+		a:active { transform:translateY(4px); box-shadow:0 2px 0 rgba(0,0,0,0.1), inset 0 0 5px rgba(255,255,255,0.4); border-bottom-width:2px; transition:0.1s ease; }
+		.red {
+			 background:hsl(8,59%,59%); 
+			 color:rgba(255,255,255,0.95); 
+			 text-shadow:-1px -1px 1px rgba(0,0,0,0.1); 
+			 text-decoration:none;
+		}
 		
 	</style>
 		
@@ -108,5 +136,6 @@
 				  </div>
 				</div>
 		</div>
+		<a class="red" href="home">Start Game!</a><br/>
 </body>
 </html>
