--- a/view/highscore.html
+++ b/view/highscore.html
@@ -136,6 +136,6 @@
 				  </div>
 				</div>
 		</div>
-		<a class="red" href="home">Start Game!</a><br/>
+		<a class="red" href="game">Play again!</a><br/>
 </body>
 </html>
