--- a/view/howto.html
+++ b/view/howto.html
@@ -72,7 +72,7 @@
 					<p>4. 1 วินาทีมีค่าเท่ากับ 10 คะเเนน ดังนั้นคะเเนนจะลดลงตามเวลา</p><br/><br/>
 					<p>5. เมื่อผู้เล่นผ่านด่าน คะเเนนจะเก็บสะสมตั้งเเต่ด่านเเรกถึงปัจจุบัน</p> <br/><br/>
 					<p>6. ลุยกันเลยยยยย !</p> <br/><br/><br/>
-					<br/><a class="red" href="home">Start Game!</a><br/>
+					<br/><a class="red" href="game">Start Game!</a><br/>
 				</div>
 		</div>
 </body>
